unpackaged/main/default/objects/Passport__c/Passport__c.object-meta.xml
<CustomObject>
    <label>Passport and Photo ID</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Passport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passports and Photo IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>