unpackaged/main/default/objects/Passport__c/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <formula>IF(ISPICKVAL(Client_Name__r.Status__c, "Active"), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>