unpackaged/main/default/objects/Passport__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>