unpackaged/main/default/objects/Passport__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authority</label>
    <type>TextArea</type>
</CustomField>