unpackaged/main/default/objects/Passport__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Passports</relationshipName>
    <type>Lookup</type>
</CustomField>