unpackaged/main/default/objects/Passport__c/fields/Country_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Country_Issued_By__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Country Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>