unpackaged/main/default/objects/Passport__c/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Country of Birth</label>
    <type>TextArea</type>
</CustomField>