unpackaged/main/default/objects/Passport__c/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <formula>IF(AND(!ISBLANK(Expire_Date__c), Expire_Date__c &gt; TODAY()), Expire_Date__c-TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>