unpackaged/main/default/objects/Passport__c/fields/Don_t_Remind__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don't Remind</label>
    <type>Checkbox</type>
</CustomField>