unpackaged/main/default/objects/Passport__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>