unpackaged/main/default/objects/Passport__c/fields/Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name as it Appears on Passport</label>
    <length>200</length>
    <type>Text</type>
</CustomField>