unpackaged/main/default/objects/Passport__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Passport Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>