unpackaged/main/default/objects/Passport__c/fields/Passport_Overdue_Status__c.field-meta.xml
<CustomField>
    <fullName>Passport_Overdue_Status__c</fullName>
    <description>IF( Expire_Date__c - Today() &lt;= 270, 
IMAGE("/servlet/servlet.FileDownload?file=0150b000001v3S3","Red Flag",32,32), "")</description>
    <formula>IF( Expire_Date__c - Today() &lt;= 270, 
IMAGE("/servlet/servlet.FileDownload?file=0150b000001v3S3","Red Flag",32,32), "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Overdue Status</label>
    <type>Text</type>
</CustomField>