unpackaged/main/default/objects/Passport__c/fields/State_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>State_of_Birth__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>State of Birth</label>
    <type>TextArea</type>
</CustomField>