unpackaged/main/default/objects/Passport__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(OR(ISBLANK(Expire_Date__c), Expire_Date__c &gt; TODAY()), "Valid", "Expired")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>