unpackaged/main/default/objects/Passport__c/listViews/Passports.listView-meta.xml
<ListView>
    <fullName>Passports</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Passports</label>
</ListView>